[package]
name = "systematic"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Rusty bindings to libsystemd"
readme = "README.md"
documentation = "https://docs.rs/systematic"
repository = "https://github.com/verdiwm/systematic"
include = ["src/**/*.rs", "build.rs", "README.md", "LICENSE"]

[dependencies]
libc = "0.2.169"

[build-dependencies]
pkg-config = "0.3.31"
